--- a/.github/workflows/fetch_and_predict.yml
+++ b/.github/workflows/fetch_and_predict.yml
@@ -1,9 +1,8 @@
 name: Fetch and Predict Penguin Species
 
 on:
-  schedule:
-    - cron: '30 7 * * *'  # Runs every day at 7:30 AM UTC
-    
+  workflow_dispatch:  # Allows manual trigger from GitHub Actions UI
+
 jobs:
   fetch_and_predict:
     runs-on: ubuntu-latest
